...
            "value" : "الاسم"
          }
        },
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Name"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Name"
...
            "value" : "Löschen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Eliminar"
...
            "value" : "Fertig"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hecho"
...
            "value" : "Abspielen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Play"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reproducir"
...
            "value" : "Speichern"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Guardar"
...
            "value" : "Zufällig"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Shuffle"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Aleatorio"
...
      "comment" : "A fine print statement indicating that users can cancel their subscription at any time without any hidden fees.",
      "isCommentAutoGenerated" : true
    },
    "Cancel Emergency Mode" : {

    },
    "Category" : {

    },
    "category.ambient" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
...
            "value" : "Klassische Musik"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Classical Music"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Música clásica"
...
            "value" : "Schlaflieder"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Lullabies"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Canciones de cuna"
...
    "Confidence %lld percent" : {

    },
    "Continue" : {

    },
    "Create" : {

    },
    "Create New Playlist" : {

    },
    "Create Playlist" : {
...
        }
      }
    },
    "Delete %lld Tracks" : {

    },
    "Delete Playlist" : {

    },
    "Delete Playlist?" : {

    },
    "Delete Selected" : {
...
    "Duplicate Playlist" : {

    },
    "Edit Baby" : {

    },
    "Edit Details" : {

    },
    "Edit Playlist" : {

    },
    "edit.babyInformation" : {
...
    "Learning Data Reset" : {

    },
    "Learning Status" : {

    },
    "Library" : {

    },
    "Listening for cry" : {

    },
    "Listening..." : {
...
    "More usage improves accuracy" : {

    },
    "My Awesome Playlist" : {

    },
    "My Playlists" : {

    },
    "Name" : {

    },
    "nav.about" : {
...
    "Not listening" : {

    },
    "Not Now" : {

    },
    "Now Playing" : {

    },
    "NOW PLAYING" : {

    },
    "Offline Content Ready" : {
...
    "Play %@" : {

    },
    "Play 10s Preview" : {

    },
    "Play All" : {

    },
    "Play Classical Music" : {

    },
    "Play classical music for your baby" : {
...
            "value" : "Warteschlange"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Queue"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cola"
...
            "value" : "Als nächstes"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Up Next"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "A continuación"
...
    "Playlist Details" : {

    },
    "Playlist Name" : {

    },
    "Playlists (%lld)" : {

    },
    "Popular" : {

    },
    "Premium" : {

    },
    "premium.free" : {
      "extractionState" : "manual",
      "localizations" : {
        "ar" : {
...
    "Quick Picks" : {

    },
    "Quick Start" : {

    },
    "Recent" : {

    },
    "Recent Activity" : {

    },
    "Recently Played" : {

    },
    "Refreshes %@" : {

    },
    "Remove" : {

    },
    "Remove Download" : {

    },
    "Remove Download?" : {
...
    "Show All Categories" : {

    },
    "Shuffle" : {

    },
    "Shuffle Off" : {
      "comment" : "A label for a button that turns off shuffle mode in the playback queue.",
      "isCommentAutoGenerated" : true
    },
    "Shuffle On" : {

    },
    "Soothbee" : {

    },
    "Soothing for" : {
...
        }
      }
    },
    "Top 5 Most Effective" : {

    },
    "Track Details" : {
      "comment" : "The title of the view that appears when a user taps on a track in the \"Tracks\" list.",
      "isCommentAutoGenerated" : true
    },
    "Tracks (%lld)" : {

    },
...
